@@ -1,3 +1,8 @@
+2007-07-03  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* AssemblyInfo.cs, Makefile.am, Mono.Addins.Gui.mdp: Sign the assembly.
+	* Mono.Addins.Gui/AddinInstallerDialog.cs: Added missing (C) header.
+
 2007-07-02  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* gtk-gui/generated.cs, gtk-gui/Mono.Addins.Gui.AddinManagerDialog.cs:
